--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - 'v*.*.*'  # Triggers on tags like v1.0.0
 
 jobs:
   release:
@@ -16,13 +16,15 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '20'  # Updated Node.js version
 
       - name: Install Dependencies
         run: npm install
 
       - name: Build All Platforms
         run: npm run build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Pass GITHUB_TOKEN
 
       - name: Create Release
         id: create_release
@@ -30,8 +32,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
 
@@ -41,7 +43,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/*.exe
+          asset_path: ./dist/LeadsFollower-Windows.exe
           asset_name: LeadsFollower-Windows.exe
           asset_content_type: application/octet-stream
 
@@ -51,7 +53,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/*.AppImage
+          asset_path: ./dist/LeadsFollower-1.0.0.AppImage
           asset_name: LeadsFollower-Linux.AppImage
           asset_content_type: application/octet-stream
 
@@ -61,6 +63,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/*.dmg
+          asset_path: ./dist/LeadsFollower-macOS.dmg
           asset_name: LeadsFollower-macOS.dmg
           asset_content_type: application/octet-stream
