--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "auto-launch": "^5.0.6",
+    "electron-log": "^5.2.2",
     "electron-updater": "^6.3.9",
     "mongodb": "^5.7.0"
   },
