--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,10 @@ name: Release
 on:
   push:
     tags:
-      - 'v*.*.*'  # Triggers on tags like v1.0.0
+      - 'v*.*.*'  # Triggers on tags like v1.0.0, v1.0.1, etc.
+
+permissions:
+  contents: write  # Grants write access to repository contents, allowing release creation
 
 jobs:
   release:
@@ -16,7 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'  # Updated Node.js version
+          node-version: '16'
 
       - name: Install Dependencies
         run: npm install
@@ -24,7 +27,7 @@ jobs:
       - name: Build All Platforms
         run: npm run build
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Pass GITHUB_TOKEN
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Ensures electron-builder uses the correct token
 
       - name: Create Release
         id: create_release
@@ -32,8 +35,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
 
@@ -43,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/LeadsFollower-Windows.exe
+          asset_path: ./dist/*.exe
           asset_name: LeadsFollower-Windows.exe
           asset_content_type: application/octet-stream
 
@@ -53,7 +56,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/LeadsFollower-1.0.0.AppImage
+          asset_path: ./dist/*.AppImage
           asset_name: LeadsFollower-Linux.AppImage
           asset_content_type: application/octet-stream
 
@@ -63,6 +66,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/LeadsFollower-macOS.dmg
+          asset_path: ./dist/*.dmg
           asset_name: LeadsFollower-macOS.dmg
           asset_content_type: application/octet-stream
