--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder"
+    "build": "electron-builder",
+    "build:win": "electron-builder --win",
+    "build:linux": "electron-builder --linux",
+    "build:mac": "electron-builder --mac"
   },
   "author": "Ben Swissa",
   "license": "MIT",
@@ -40,7 +43,8 @@
     "publish": {
       "provider": "github",
       "owner": "BenSwDev",
-      "repo": "leadsFollower"
+      "repo": "leadsFollower",
+      "private": false
     }
   },
   "dependencies": {
