--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "auto-launch": "^5.0.6",
+    "dotenv": "^16.4.5",
     "electron-log": "^5.2.2",
     "electron-updater": "^6.3.9",
     "mongodb": "^5.7.0"
