--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "electron-builder",
     "build:win": "electron-builder --win --publish=never",
     "build:linux": "electron-builder --linux --publish=never",
-    "build:mac": "electron-builder --mac --publish=never"
+    "build:mac": "electron-builder --mac --publish=never",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "author": "Ben Swissa",
   "license": "MIT",
